--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,32 @@
 *.swo
 etc/*
 !etc/bulbulator.config.sh.sample
+
+# Logs
+logs
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+
+# Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
+.grunt
+
+# Compiled binary addons (http://nodejs.org/api/addons.html)
+build/Release
+
+# Dependency directory
+# Deployed apps should consider commenting this line out:
+# see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
+node_modules
+
+# Deployment directory
+deploy
+
+# Bower directory
+bower_components
+
+# Temp dirs
+.tmp
