--- a/ui/package.json
+++ b/ui/package.json
@@ -6,15 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "body-parser": "~1.0.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
     "express": "~4.2.0",
     "express-session": "^1.6.1",
+    "github": "^0.2.0",
     "jade": "~1.3.0",
     "moment": "^2.7.0",
     "morgan": "~1.0.0",
     "mysql": "~2.3.2",
+    "nodegit": "^0.1.4",
     "nodejs-gravatar": "^1.0.2",
     "passport": "^0.2.0",
     "passport-google": "^0.3.0",
