--- a/ui/bower.json
+++ b/ui/bower.json
@@ -23,6 +23,7 @@
     "angular-latest": "~1.2.19",
     "angular-moment": "~0.7.1",
     "angular-bootstrap": "~0.11.0",
-    "ng-table": "~0.3.3"
+    "ng-table": "~0.3.3",
+    "socket.io-client": "~1.0.6"
   }
 }
