--- a/ui/package.json
+++ b/ui/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "ansi-to-html": "^0.2.0",
     "async": "^0.9.0",
     "body-parser": "~1.0.0",
     "connect-flash": "^0.1.1",
@@ -21,6 +22,7 @@
     "nodejs-gravatar": "^1.0.2",
     "passport": "^0.2.0",
     "passport-google": "^0.3.0",
+    "socket.io": "^1.0.6",
     "static-favicon": "~1.0.0"
   }
 }
