--- a/ui/bower.json
+++ b/ui/bower.json
@@ -24,6 +24,7 @@
     "angular-moment": "~0.7.1",
     "angular-bootstrap": "~0.11.0",
     "ng-table": "~0.3.3",
-    "socket.io-client": "~1.0.6"
+    "socket.io-client": "~1.0.6",
+    "angular-sanitize": "~1.2.20"
   }
 }
