--- a/ui/package.json
+++ b/ui/package.json
@@ -19,7 +19,11 @@
     "moment": "^2.7.0",
     "morgan": "~1.0.0",
     "mysql": "~2.3.2",
+    "nl2br": "0.0.3",
     "nodejs-gravatar": "^1.0.2",
+    "nodemailer": "^1.0.3",
+    "nodemailer-markdown": "^0.1.2",
+    "nodemailer-ses-transport": "^0.1.1",
     "passport": "^0.2.0",
     "passport-google": "^0.3.0",
     "socket.io": "^1.0.6",
