--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
+    "email-templates": "^1.1.0",
     "express": "~4.2.0",
     "express-session": "^1.6.1",
     "github": "^0.2.0",
