--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "express": "~4.2.0",
     "express-session": "^1.6.1",
     "github": "^0.2.0",
+    "hiredis": "^0.1.17",
     "jade": "~1.3.0",
     "moment": "^2.7.0",
     "morgan": "~1.0.0",
@@ -27,6 +28,7 @@
     "nodemailer-ses-transport": "^0.1.1",
     "passport": "^0.2.0",
     "passport-google": "^0.3.0",
+    "redis": "^0.11.0",
     "socket.io": "^1.0.6",
     "static-favicon": "~1.0.0"
   }
