--- a/ui/package.json
+++ b/ui/package.json
@@ -30,6 +30,7 @@
     "passport-google": "^0.3.0",
     "redis": "^0.11.0",
     "socket.io": "^1.0.6",
+    "ssh2": "^0.3.4",
     "static-favicon": "~1.0.0"
   }
 }
