--- a/ui/package.json
+++ b/ui/package.json
@@ -20,7 +20,8 @@
     "mysql": "~2.3.2",
     "nodejs-gravatar": "^1.0.2",
     "passport": "^0.2.0",
-    "passport-google": "^0.3.0",
+    "passport-google-plus": "^0.2.0",
+    "ssh2": "^0.3.3",
     "static-favicon": "~1.0.0"
   }
 }
